# nqcc

./: .gitignore  LICENSE  README.md  pyproject.toml  run_compiler.sh
.github/workflows/: pr.yml
nqcc/: __init__.py  __main__.py  _preprocess.py
sample_programs/: return_constant  return_constant.c  return_many_negatives.c  return_negative_constant.c
sample_programs/ch03/: binary_operators.c  many_operator.c  simple_add.c  simple_divide.c  two_operator.c  two_operator_negation.c
sample_programs/ch04/: return_logical_compare.c  return_logical_not.c
sample_programs/ch05/: short_circuit_checker.c  simple_assign.c
sample_programs/ch06/: nested_if.c  simple_ternary.c
sample_programs/ch07/: braced_if.c  deeply_nested_scope.c  nested_scope.c
sample_programs/ch08/: nested_loops.c  simple_do.c  simple_for.c  simple_while.c
sample_programs/ch09/: check_memory_leaks.c  fib.c  hello_world.c  simple_call.c  simple_call_with_arg.c
sample_programs/ch10/: simple_static_var.c
src/nqcc/: __init__.py  __main__.py  _code_emission.py  _invoke_gcc.py  _lexer.py  _preprocess.py
src/nqcc/codegen/: __init__.py  _assembler_ast.py  _convert_tacky.py  _driver.py  _instruction_fixup.py  _pseudo_replace.py
src/nqcc/frontend/: __init__.py  _frontend.py
src/nqcc/frontend/lexer/: __init__.py  _driver.py
src/nqcc/frontend/parser/: __init__.py  _exceptions.py  _token_tape.py
src/nqcc/frontend/semantic_analysis/: __init__.py  _driver.py
src/nqcc/frontend/tacky/: __init__.py  _driver.py
src/nqcc/lexer/: __init__.py  _driver.py  _lexer.py  _tokens.py
src/nqcc/parser/: __init__.py  _driver.py  _exceptions.py  _parsing.py  _source_ast.py  _token_tape.py
src/nqcc/semantic_analysis/: __init__.py  _driver.py  _exceptions.py  _identifier_resolution.py  _loop_labelling.py  _type_checker.py  _variable_resolution.py
src/nqcc/tacky/: __init__.py  _driver.py  _tacky_ast.py  _tacky_generator.py
tests/integration/: test_sample_programs.py  test_samples_ch03.py  test_samples_ch04.py  test_samples_ch05.py  test_samples_ch06.py  test_samples_ch07.py  test_samples_ch08.py  test_samples_ch09.py  test_samples_ch10.py  test_samples_smoke.py  utils.py
tests/unit/: test_lexer.py
tests/unit/codegen/: test_asm_serde.py  test_assembler_ast.py  test_instruction_fixup.py  test_pseudo_replace.py  test_tacky_convertor.py
tests/unit/codegen/convertor/: test_instructions.py  test_operators.py  test_tacky_convertor.py
tests/unit/lexer/: test_extract_tokens.py  test_lexer.py  test_tokens.py
tests/unit/parser/: test_parser_serde.py  test_parsing.py  test_serde.py  test_source_ast.py  test_token_tape.py
tests/unit/parser/parsing/: test_expressions.py  test_optional_expressions.py  test_parsing.py  test_source_expressions.py  test_statements.py
tests/unit/semantic_analysis/: test_loop_labelling.py  test_type_checking.py  test_variable_resolver.py
tests/unit/semantic_analysis/identifier_resolver/: test_declarations.py  test_expressions.py  test_identifier_resolver.py  test_inner_map.py  test_statements.py
tests/unit/semantic_analysis/variable_resolver/: test_declarations.py  test_expressions.py  test_inner_map.py  test_statements.py  test_variable_resolver.py
tests/unit/tacky/: test_tacky_generator.py  test_tacky_serde.py
(+6 files in other folders)
