[project]
name = "nqcc-workspace"
version = "0.0.1.dev0"
description = "The Not-Quite-C-Compiler"
authors = [
    { name = "Richard Edgar", email = "freesurfer.rge@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "pydantic",
]

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8",
    "ruff==0.15.2",
    "nqcc",
    "nqcc-frontend",
]

[tool.uv.sources]
nqcc = { workspace = true }
nqcc-frontend = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
preview = true
fixable = [
    "A",
    "B",
    "C",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
select = [
    "A",
    "B",
    "C",
    "E",
    "F",
    "G",
    "F401",  # unused-import
    "I", # unsorted-import
    "RUF022", # unsorted-dunderall
]
ignore = [
    "DOC502",  # Raised exception is not explicitly raised
]
extend-select = [
    "D204",  # 1 blank line required after class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "D401",  # First line of docstring should be in imperative mood
    "D404",  # First word of the docstring should not be "This"
]


[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
python_version = "3.14"
